<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/reminder_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        tools:text="Wed Nov 14 11:56 EST 2018" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reminder_title_label" />

    <EditText
        android:id="@+id/reminder_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reminder_title_hint" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reminder_radius_label" />

    <EditText
        android:id="@+id/reminder_radius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reminder_radius_hint" />


    <Switch
        android:id="@+id/reminder_toggle"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reminder_switch_text" />

    <Button
        android:id="@+id/reminder_button_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reminder_map_button" />

    <Button
        android:id="@+id/reminder_button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reminder_save_button" />

    <Button
        android:id="@+id/reminder_button_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reminder_delete_button" />


</LinearLayout>